--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/wolfssl"]
 	path = deps/wolfssl
 	url = https://github.com/wolfSSL/wolfssl.git
+[submodule "deps/wolfmqtt"]
+	path = deps/wolfmqtt
+	url = https://github.com/wolfSSL/wolfMQTT.git
