mqtt: Update WolfMQTT build flags

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -76,7 +76,7 @@ set(wolfmqtt_src
     ${CMAKE_CURRENT_LIST_DIR}/wolfmqtt/src/mqtt_packet.c
     ${CMAKE_CURRENT_LIST_DIR}/wolfmqtt/src/mqtt_socket.c)
 add_library(wolfmqtt ${wolfmqtt_src})
-target_compile_definitions(wolfmqtt PRIVATE WOLFSSL_USER_SETTINGS WOLFMQTT_NONBLOCK ENABLE_MQTT_TLS)
+target_compile_definitions(wolfmqtt PRIVATE WOLFSSL_USER_SETTINGS WOLFMQTT_NONBLOCK WOLFMQTT_USER_SETTINGS ENABLE_MQTT_TLS)
 target_include_directories(wolfmqtt PUBLIC ${CMAKE_CURRENT_LIST_DIR}/wolfmqtt
     ${CMAKE_CURRENT_LIST_DIR}/wolfssl
     ${CMAKE_CURRENT_LIST_DIR}/wolfssl_init)
